# refusal_direction

./: pyproject.toml  requirements.txt  test_chat_template.py  test_chat_templates.py
dataset/: generate_datasets.ipynb  load_dataset.py
dataset/processed/: advbench_test.json  advbench_train.json  advbench_val.json  harmbench_std_test.json  harmbench_std_val.json
dataset/splits/: info.txt
dataset/splits_harmbench_std/: harmful_train.json  info.txt
dataset/splits_orig/: info.txt
pipeline/: config.py  run_pipeline.py
pipeline/model_utils/: gemma_model.py  llama2_cat_model.py  llama2_model.py  llama32_model.py  llama3_model.py  llama3_robust_mode.py  llama3_rr_model.py  model_base.py  model_factory.py  phi3_capo_model.py  phi4_mini_model.py  qwen25_model.py  qwen3_4b_model.py  qwen_model.py  yi_model.py  zephyr_r2d2_model.py
