[project]
name = "refusal-direction"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.7.0",
    "datasets>=4.4.1",
    "dotenv>=0.9.9",
    "einops>=0.8.1",
    "huggingface-hub[cli]>=0.32.4",
    "ipykernel>=7.1.0",
    "jaxtyping>=0.3.3",
    "jupyter>=1.1.1",
    "litellm>=1.75.3",
    "matplotlib>=3.10.7",
    "numpy>=1.26.4",
    "packaging>=25.0",
    "pandas>=2.2.2",
    "peft>=0.17.1",
    "scipy>=1.16.2",
    "seaborn>=0.13.2",
    "sentence-transformers>=5.0.0",
    "torch>=2.6",
    "transformers==4.51.3",
    "vllm>=0.9.2",
]
